--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,8 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24102).
   * Ascii map is now declare as AsciiMap (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24106).
+  * Return label for identify -format "%l" (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24105).
 
 2013-08-26  6.8.6-9 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.6-9, SVN revision 13087.
