--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-09-18  6.8.6-10 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.6-10, SVN revision 13240.
+
 2013-09-07  6.8.6-10 Dirk Lemstra <dirk@snakeware...>
   * Added support for writing DDS files.
 
