--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-09-19  6.8.7-0 Dirk Lemstra <dirk@snakeware...>
+  * Fixed issue with colormap when reading viff image.
+
 2013-09-18  6.8.6-10 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.6-10, SVN revision 13240.
 
