--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2013-09-19  6.8.7-0 Dirk Lemstra <dirk@snakeware...>
   * Fixed issue with colormap when reading viff image.
+  * Added support for opening https files under windows (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24121).
 
 2013-09-18  6.8.6-10 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.6-10, SVN revision 13240.
