--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
   * Fixed issue with colormap when reading viff image.
   * Added support for opening https files under windows (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24121).
+  * Fixed incorrect format when reading EPT image from a blob (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24129).
 
 2013-09-18  6.8.6-10 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.6-10, SVN revision 13240.
