--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-09-23  6.8.7.0 Glenn Randers-Pehrson <glennrp@image...>
+  * Fixed comments in coders/png.c about interpretation of the -quality
+  value (reference
+  http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=24134).
+
 2013-09-19  6.8.7-0 Dirk Lemstra <dirk@snakeware...>
   * Fixed issue with colormap when reading viff image.
   * Added support for opening https files under windows (reference
