--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,12 @@
-2013-09-23  6.8.7.0 Glenn Randers-Pehrson <glennrp@image...>
-  * Fixed comments in coders/png.c about interpretation of the -quality
-  value (reference
+2013-09-25  6.8.7-0 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.7-0, SVN revision 13290.
+
+2013-09-23  6.8.700 Glenn Randers-Pehrson <glennrp@image...>
+    * Comment interpretation of the -quality value in PNG coder (reference
   http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=24134).
 
 2013-09-19  6.8.7-0 Dirk Lemstra <dirk@snakeware...>
-  * Fixed issue with colormap when reading viff image.
+  * Fixed issue with colormap when reading Viff image.
   * Added support for opening https files under windows (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24121).
   * Fixed incorrect format when reading EPT image from a blob (reference
