--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2013-09-25  6.8.7-0 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.7-0, SVN revision 13290.
 
-2013-09-23  6.8.700 Glenn Randers-Pehrson <glennrp@image...>
+2013-09-23  6.8.7-0 Glenn Randers-Pehrson <glennrp@image...>
     * Comment interpretation of the -quality value in PNG coder (reference
   http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=24134).
 
