--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-09-26  6.8.7-1 Dirk Lemstra <dirk@snakeware...>
+  * Fixed incorrect size of DICOM image (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24135).
+
 2013-09-25  6.8.7-0 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.7-0, SVN revision 13290.
 
