--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,7 @@
   * New version 6.8.7-0, SVN revision 13290.
 
 2013-09-23  6.8.7-0 Glenn Randers-Pehrson <glennrp@image...>
-    * Comment interpretation of the -quality value in PNG coder (reference
+  * Fixed comments about the -quality value in PNG coder (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=24134).
 
 2013-09-19  6.8.7-0 Dirk Lemstra <dirk@snakeware...>
