--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
 2013-09-26  6.8.7-1 Dirk Lemstra <dirk@snakeware...>
   * Fixed incorrect size of DICOM image (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24135).
+  * Fixed rounding in YUV coder (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24148).
 
 2013-09-25  6.8.7-0 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.7-0, SVN revision 13290.
