--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24135).
   * Fixed rounding in YUV coder (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24148).
+  * Fixed colorspace issue when combining images (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24173).
 
 2013-09-25  6.8.7-0 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.7-0, SVN revision 13290.
