--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-10-10  6.8.7-1 Cristy  <quetzlzacatenango@image...>
+  * Add support for the -complex option,  perform complex mathematics on an
+    image sequence.
+
 2013-09-27  6.8.7-1 Glenn Randers-Pehrson <glennrp@image...>
   * Fixed problem with PNG8 reduction in coders/png.c (special case where
     exactly 256 colors plus one transparent color are present).
