--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 2013-10-10  6.8.7-1 Cristy  <quetzlzacatenango@image...>
-  * Add support for the -complex option,  perform complex mathematics on an
+  * Add support for the -complex option, perform complex mathematics on an
     image sequence.
 
 2013-09-27  6.8.7-1 Glenn Randers-Pehrson <glennrp@image...>
@@ -16,6 +16,8 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24148).
   * Fixed colorspace issue when combining images (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24173).
+  * Replaced libjpeg with libjpeg-turbo in the windows distribution.
+  * Added support for liquid rescale to the windows distribution.
 
 2013-09-25  6.8.7-0 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.7-0, SVN revision 13290.
