--- a/ChangeLog
+++ b/ChangeLog
@@ -18,8 +18,7 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24173).
   * Replaced libjpeg with libjpeg-turbo in the windows distribution.
   * Added support for liquid rescale to the windows distribution.
-  * Set image type after syncing the pixel cache (reference
-    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24188)
+  * Set image type after syncing the pixel cache.
 
 2013-09-25  6.8.7-0 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.7-0, SVN revision 13290.
