--- a/ChangeLog
+++ b/ChangeLog
@@ -8,8 +8,9 @@
   * Fixed problem with PNG8 reduction in coders/png.c (special case where
     exactly 256 colors plus one transparent color are present).
   * Set image->intensity = Rec709LuminancePixelIntensityMethod before
-    transforming the colorspace to Gray while reading a gray PNG (reference
+    setting the colorspace to Gray while reading a gray PNG (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24205).
+    This ensures that image->gamma will be set to 1.0 (linear).
 
 2013-09-26  6.8.7-1 Dirk Lemstra <dirk@snakeware...>
   * Fixed incorrect size of DICOM image (reference
