--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-10-19  6.8.7-0 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.7-1, SVN revision 13486.
+
 2013-10-10  6.8.7-1 Cristy  <quetzlzacatenango@image...>
   * Add support for the -complex option, perform complex mathematics on an
     image sequence.
