--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-10-20  6.8.7-2 Cristy  <quetzlzacatenango@image...>
+  * Define cmsUInt32Number if LCMS version is < 2000.
+
 2013-10-19  6.8.7-0 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.7-1, SVN revision 13486.
 
