git-svn-id: https://subversion.imagemagick.org/subversion/ImageMagick/branches/ImageMagick-6@13534 aa41f4f7-0bf4-0310-aa73-e5a19afd5a74

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
+2013-10-22  6.8.7-2 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.7-2, SVN revision 13534.
+
 2013-10-20  6.8.7-2 Cristy  <quetzlzacatenango@image...>
   * Define cmsUInt32Number if LCMS version is < 2000.
+  * Set xc:gray() intensity to Rec709Luma (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24303).
 
 2013-10-20  6.8.7-2 Dirk Lemstra <dirk@snakeware...>
   * GetImageDepth() no longer returns incorrect depth when HDRI enabled.
