git-svn-id: https://subversion.imagemagick.org/subversion/ImageMagick/branches/ImageMagick-6@13548 aa41f4f7-0bf4-0310-aa73-e5a19afd5a74

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-10-23  6.8.7-3 Cristy  <quetzlzacatenango@image...>
+  * The -roll option is now working when the +x coordinate is +0 (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24314).
+
 2013-10-22  6.8.7-2 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.7-2, SVN revision 13534.
 
