--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-10-24  6.8.7-4 Cristy  <quetzlzacatenango@image...>
+  * Color reduction acceleration from Yoya (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=24324).
+
 2013-10-23  6.8.7-3 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.7-3, SVN revision 13557.
 
