--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-10-26  6.8.7-4  Siu Chi Chan <...@amd.com>
+  * major improvements to the OpenCL infrastructure.
+  * new OpenCL accelerated algorithms (function image, blur, radial blur,
+    unsharp mask, resize, contrast, equalize, despeckle).
+  * added a new checkbox to enable OpenCL in the configure program.
+
 2013-10-24  6.8.7-4 Cristy  <quetzlzacatenango@image...>
   * Color reduction acceleration from Yoya (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=24324).
