--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,8 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24330).
   * Handle 16-bit JPEG-comrpessed TIFF images (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24331).
+  * An image -compose ModulusAdd negate-image returns the original (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24337).
 
 2013-10-23  6.8.7-3 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.7-3, SVN revision 13557.
