--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,8 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24331).
   * An image -compose ModulusAdd negate-image returns the original (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24337).
+  * Support %U escape character for resolution units (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=24140).
 
 2013-10-23  6.8.7-3 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.7-3, SVN revision 13557.
