--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2014-01-18  6.8.8-3 Dirk Lemstra <dirk@snakeware...>
   * Added ResourceLimits class to Magick++.
+  * Added support for defining dimensions with icon:auto-resize (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=24796).
 
 2014-01-16  6.8.8-3 Glenn Randers-Pehrson <glennrp@image...>
   * Added "-define png:swap-bytes" option (reference
