--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@
 2014-01-15  6.8.8-3 Cristy  <quetzlzacatenango@image...>
   * The -type truecolor option for a grayscale image returns RGB JPEG (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24814).
+  * Support JSON coder (.e.g. convert image.jpg image.json).
 
 2014-01-10  6.8.8-2 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.8-2, SVN revision 14347.
