--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
 2014-01-16  6.8.8-3 Glenn Randers-Pehrson <glennrp@image...>
   * Added "-define png:swap-bytes" option (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=24818).
+  * Added image->duration to image.h, calculate duration in gif.c, and
+    report duration in identify.c
 
 2014-01-15  6.8.8-3 Cristy  <quetzlzacatenango@image...>
   * The -type truecolor option for a grayscale image returns RGB JPEG (reference
