--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-01-25  6.8.8-3 Cristy  <quetzlzacatenango@image...>
+  * New version 6.8.8-3, SVN revision 14650.
+
 2014-01-18  6.8.8-3 Dirk Lemstra <dirk@snakeware...>
   * Added ResourceLimits class and text direction/gravity to Magick++.
   * Added support for defining dimensions with icon:auto-resize (reference
